# ethode

./: .gitignore  README.md  alt.py  alternate.py  bp_ode.py  bp_ss.py  btc_units.txt  complex.py  demo.py  demo_pid_comparison.py  esa.py  eth_units.txt  ethode.py  ethode_extended.py  examples.py  generic.py  misc.py  modular.py  modular_types.py  mypy.ini  oct.py  param_hierarchy.py  pyproject.toml  requirements.txt  simple.py  stochastic_extensions.py  test_controller.py  test_debug.py  test_debug2.py  test_fee_adapter.py  test_fixes.py  test_hawkes_adapter.py  test_implemented_extensions.py  test_jumpdiffusion_adapter.py  test_jumpprocess_adapter.py  test_mode1_hawkes.py  test_module_configs.py  test_new_modules_comprehensive.py  test_param_hierarchy.py  test_pid_migration.py  (+9 more)
adv/: alternate.py  generic.py  modular.py  units.py
bp/: bp_ode.py
demos/: demo_controller.py
docs/: ADAPTER_PATTERN.md  HAWKES_JUMPD_SPEC.md  JAX_CODING_STYLE.md  JUMPD_SPEC.md  JUMPPROC_API_SPEC.md  MODE2_USAGE_GUIDE.md  MULTI_SUBSYSTEM_DESIGN.md  PID_MIGRATION_GUIDE.md  adapter_examples.md  migration_guide.md  plan.md
docs/misc/: EXTENSIONS.md
ethode/: __init__.py  adapters.py  btc_units.txt  eth_units.txt  fields.py  legacy.py  metrics.py  noise.py  runtime.py  simulation.py  twap.py  types.py  units.py  validation.py
ethode.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ethode/controller/: __init__.py  config.py  dimensions.py  kernel.py  legacy.py
ethode/fee/: __init__.py  (+3 more)
guide/: guide.md
tests/: conftest.py  test_adapters.py  test_deprecation.py  test_dimensions.py  test_ethode.py  test_extensions.py  test_hawkes_adapter.py  test_implemented_extensions.py  test_liquidity_adapter.py  test_mode2_hawkes.py  test_mypy_types.py  test_new_modules_comprehensive.py  test_rate_limit_fix.py  test_simulation.py  test_stochastic_extensions.py  test_unit_updates.py  test_validation.py
(+17 files in other folders)
