[project]
name = "ethode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pint>=0.24.4",
    "pydantic>=2.10.6",
    "scipy>=1.15.1",
]
