[project]
name = "ethode"
version = "0.1.0"
description = "Unit-aware dynamical systems simulation framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arrow>=1.3.0",
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    "matplotlib>=3.9.2",
    "numpy>=2.1.0",
    "pandas>=2.2.2",
    "penzai>=0.2.2",
    "pint>=0.24.3",
    "pydantic>=2.8.2",
    "scipy>=1.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
]
