[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ethode"
version = "0.1.0"
description = "JAX-based dynamical systems simulation with automatic unit checking and dimensional analysis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core JAX stack
    "jax>=0.4.35",
    "jaxlib>=0.4.35",
    # Critical: Penzai for pytree structures and unit handling
    "penzai>=0.2.2",
    # Unit handling and validation
    "pint>=0.24.3",
    "pydantic>=2.8.2",
    # Scientific computing and visualization
    "numpy>=2.1.0",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
    # Utilities
    "arrow>=1.3.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.11.0",
    "diffrax>=0.7.0",
]

[tool.setuptools]
packages = ["ethode"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselected by default)",
]
addopts = "-m 'not slow'"
